<resources>
    <string name="app_name">UCSAL Notas</string>

    <!-- Strings related to login -->
    <string name="matricula">Matricula</string>
    <string name="senha">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_out">Sair</string>
    <string name="action_forgot_password">Esqueci minha senha</string>
    <string name="title_activity_notas">Notas</string>
    <string name="action_colors">Cores</string>
    <string name="action_share">Compartilhar</string>
    <string name="copyright">Desenvolvido por Luiz Henrique Rios</string>
</resources>